--- a/src/components/Aside/style.css
+++ b/src/components/Aside/style.css
@@ -12,6 +12,8 @@
 .Aside h1{
     font-size: 5rem;
     margin-bottom: 15px;
+    text-transform: uppercase;
+    letter-spacing: 15px;
 }
 
 .Aside .small-info{
@@ -26,6 +28,7 @@
 }
 
 .Aside p.description{
+    max-width: 440px;
     margin-bottom: 30px;
 }
 .Aside .button-link{
@@ -34,14 +37,15 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 65px;
+    height: 70px;
     background-color: #252525;
     color: white;
     font-weight: 100;
     letter-spacing: 5px;
     text-transform: uppercase;
     overflow: hidden;
-    max-width: 300px;
+    max-width: 250px;
+    font-size: 15px;
 }
 
 .Aside .button-link:hover::after{
@@ -54,4 +58,56 @@
     bottom: 15px;
     background-color: rgba(255, 255, 255, 0.02);
     border-radius: 100%;
+}
+
+@media screen and (min-width: 750px) {
+    .Aside{
+        padding: 30px 50px;
+    }
+
+    .Aside h1{
+        font-size: 6.25rem;
+    }
+
+    .Aside .small-info{
+        font-size: 1.5rem;
+        margin-bottom: 15px;
+    }
+
+    .Aside .description{
+        font-size: 1.5rem;
+        line-height: 2.12rem;
+    }
+    
+}
+
+@media screen and (min-width: 1100px) {
+    .Aside{
+        position: absolute;
+        max-width: 40vw;
+        top: 70px;
+        right: 0;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+    .Aside .small-info{
+        font-size: 1.06rem;
+    }
+
+    .Aside p.description{
+        font-size: 1.06rem;
+        line-height: 1.5rem;
+        margin-bottom: 40px;
+    }
+
+    .Aside h1{
+        position: relative;
+        left: -250px;
+        margin-bottom: 35px;
+    }
+    .Aside .button-link{
+        left: -150px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
 }
