--- a/src/components/Aside/style.css
+++ b/src/components/Aside/style.css
@@ -23,10 +23,13 @@
 }
 
 .Aside .small-info p{
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     margin-right: 30px;
 }
-
+.Aside .small-info p svg{
+    margin-right: 5px;
+}
 .Aside p.description{
     margin-bottom: 30px;
 }
@@ -47,6 +50,11 @@
     font-size: 15px;
 }
 
+.Aside .button-link svg{
+    margin-left: 10px;
+    margin-bottom: 1.5px;
+}
+
 .Aside .button-link:hover::after{
     content: "";
     width: 500px;
@@ -57,6 +65,11 @@
     bottom: 15px;
     background-color: rgba(255, 255, 255, 0.02);
     border-radius: 100%;
+}
+
+
+.Aside .button-link:hover svg{
+    transform: translateX(10px);
 }
 
 @media screen and (min-width: 750px) {
