--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -9,14 +9,20 @@ header{
     z-index: 5;
     background-color: white;
 }
-
-header input{
+header .search-container{
+    position: relative;
+    height: 100%;
+    max-width: 500px;
+    margin: auto;
+}
+header .search-container input{
     display: inline-block;
     position: relative;
     top: 0;
     width: 100%;
     height: 100%;
     padding: 10px 15px;
+    padding-left: 45px;
     border: 2px solid rgba(37, 37, 37, 0.5);
     border-radius: 5px;
     background-color: transparent;
@@ -24,17 +30,27 @@ header input{
 
     left: 50%;
     transform: translateX(-50%);
-    max-width: 500px;
 }
 
-header input::placeholder{
+header .search-container input::placeholder{
     color: rgba(37, 37, 37, 0.5);
 }
 
-header input:focus{
+header .search-container input:focus{
     border-color: rgba(37, 37, 37, 0.774);   
 }
 
-header input:focus::placeholder{
+header .search-container input:focus::placeholder{
     color: rgba(37, 37, 37, 0.774);
+}
+
+header .search-container i.icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 30px;
+    height: 40px;
+    top: 0;
+    left: 10px;
 }
