--- a/global.css
+++ b/global.css
@@ -27,15 +27,23 @@ input{
 }
 
 @media screen and (min-width: 1700px) {
-    .root{
+    #root{
         position: absolute;
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100vw;
         height: 100vh;
     }
-    .root .App{
+    #root .App{
         position: relative;
         display: block;
+        width: 100%;
+        height: 100%;
+        max-height: 700px;
         max-width: 1200px;
+        border: 10px solid black;
+        overflow: hidden;
+        border-radius: 50px;
     }
 }
