Adding image animation

--- a/src/components/Place/style.css
+++ b/src/components/Place/style.css
@@ -1,3 +1,9 @@
+@keyframes imageTransition {
+    to{
+        opacity: 1;
+    }
+}
+
 .place-image img{
     position: relative;
     display: block;
@@ -9,6 +15,9 @@
 .place-image{
     width: 100%;
     overflow: hidden;
+    opacity: 0;
+    animation: imageTransition 1s normal;
+    animation-fill-mode: forwards;
 }
 
 @media screen and (min-width: 1100px) {
