--- a/src/components/Place/style.css
+++ b/src/components/Place/style.css
@@ -18,6 +18,7 @@
     opacity: 0;
     animation: imageTransition 1s normal;
     animation-fill-mode: forwards;
+    animation-delay: .3s;
 }
 
 @media screen and (min-width: 1100px) {
