--- a/src/components/Aside/style.css
+++ b/src/components/Aside/style.css
@@ -14,6 +14,11 @@
         opacity: 1;
     }
 }
+@keyframes buttonHoverOpacity {
+    to{
+        opacity: 1;
+    }
+}
 
 .Aside{
     display: block;
@@ -83,8 +88,11 @@
     position: absolute;
     right: -15px;
     bottom: 15px;
-    background-color: rgba(255, 255, 255, 0.02);
+    background-color: rgba(255, 255, 255, 0.025);
     border-radius: 100%;
+    opacity: 0;
+    animation: buttonHoverOpacity .5s normal;
+    animation-fill-mode: forwards;
 }
 
 
